# EasyTunnel

./: .gitignore  CMakeLists.txt  Makefile.rendezvous  README.md  config.cpp  config.h  connection_history.cpp  connection_history.h  easy_log.cpp  hexdump.cpp  hexdump.h  ipv4_relay_fallback.cpp  ipv4_relay_fallback.h  ipv6_fallback.cpp  ipv6_fallback.h  ipv6_utils.cpp  ipv6_utils.h  log.cpp  log.h  main.cpp  nat4_traversal.cpp  nat4_traversal.h  nat_protocol.cpp  nat_protocol.h  nat_traversal.cpp  nat_traversal.h  peer_selection.cpp  peer_selection.h  rendezvous_client.cpp  rendezvous_client.h  rendezvous_config.cpp  rendezvous_config.h  rendezvous_server.cpp  statistics_history.cpp  statistics_history.h  tun_adapter.h  tun_adapter_linux.cpp  tun_adapter_windows.cpp  tunnel.conf.example  tunnel_engine.cpp  (+5 more)
.github/workflows/: build-aircraft.yml
conf/: rendezvous.json.example  tunnel.conf.example
doc/: ipv4-relay-fallback.md  ipv6-fallback.md  nat-traversal.md  state-machine.md  tui.md  tun.md
gui/: disconnect_confirmation_dialog.cpp  disconnect_confirmation_dialog.h  exit_confirmation_dialog.cpp  exit_confirmation_dialog.h  gui_app.cpp  gui_app.h  gui_app_connection.cpp  gui_app_log.cpp  gui_app_settings.cpp  gui_app_statistics.cpp  gui_main.cpp  ui_heartbeat.cpp  ui_heartbeat.h  windows_tray.cpp  windows_tray.h
rendezvous/: config.cpp  config.h  ipv4_relay_app.cpp  ipv4_relay_app.h  main.cpp  registry.cpp  registry.h  server.cpp  server.h  tui_app.cpp  tui_app.h  tui_config_tab.cpp  tui_dashboard.cpp  tui_log_tab.cpp  tui_main.cpp  tui_relay_tab.cpp
res/: EasyTunnel.rc
tests/: config_traversal_modes_test.cpp  rendezvous_capabilities_test.cpp
tui/: tui_app.cpp  tui_app.h  tui_app_connection.cpp  tui_app_log.cpp  tui_app_settings.cpp  tui_app_statistics.cpp  tui_config.cpp  tui_config.h  tui_main.cpp
